--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,17 @@
 @import 'tailwindcss';
+/* jost-latin-wght-normal */
+@font-face {
+  font-family: 'Jost Variable';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 100 900;
+  src: url(@fontsource-variable/jost/files/jost-latin-wght-normal.woff2)
+    format('woff2-variations');
+  unicode-range:
+    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
+    U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212,
+    U+2215, U+FEFF, U+FFFD;
+}
 
 @theme {
   --color-dark-blue: #01204f;
@@ -9,12 +22,30 @@
   --color-gray-blue: #465e8e;
   --color-white: #f0f7ff;
   --color-gray-white: #c2c2c3;
+  --color-ligth-blue: #538ba9;
+  --color-ligth-black: #737171;
+  --color-soft-red: #ff0000;
 }
 
-:root,
-body,
 html {
-  display: flex;
-  box-sizing: border-box;
+  position: fixed;
+  font-family: 'Jost Variable', sans-serif;
   background-color: #01204f;
+}
+#backdrop-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+#home::-webkit-scrollbar {
+  display: none;
+}
+
+#home {
+  scrollbar-width: none;
 }
